--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div id="upgrade" class="dialog"></div>
         <div id="escape" class="dialog"></div>
         <div id="options" class="dialog"></div>
+        <div id="start" class="dialog"></div>
         <script type="module" src="bundle.js"></script>
     </body>
 </html>
