add success dialog

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div id="escape" class="dialog"></div>
         <div id="options" class="dialog"></div>
         <div id="start" class="dialog"></div>
+        <div id="success" class="dialog"></div>
         <script type="module" src="bundle.js"></script>
 
     </body>
