add multipleFire skill

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
         <div id="gameOver" class="dialog"></div>
         <div id="upgrade" class="dialog"></div>
+        <div id="skill" class="dialog"></div>
         <div id="options" class="dialog"></div>
         <div id="escape" class="dialog"></div>
         <div id="start" class="dialog"></div>
